# ADPTLS_MPI

./: .gitignore  CMakeLists.txt  README.md  makefile  run.sh  tags
app/test_mpi_all2all/: main.cpp
genRHS/: main.cpp  makefile
inc/: FtlMtxMpi.hpp  MtxDen.hpp  MtxMkt.hpp  MtxSp.hpp  MtxSpMpi.hpp  MtxSpMpiA2a.hpp  adptls.hpp  def.hpp  ftmtx.hpp  mtxSpMpiA2a.hpp  mtx_basic.hpp
src/: FtlMtxMpi.cpp  MtxDen.cpp  MtxSp.cpp  MtxSpMpi.cpp  MtxSpMpiA2a.cpp  adptls.cpp  ftmtx.cpp  main.cpp  mtxSpMpiA2a.cpp  mtx_basic_den.cpp  mtx_basic_sparse.cpp
